[project]
name = "currencies-api"
version = "0.1.0"
description = "Currency exchange rate API using NBP data"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlmodel>=0.0.22",
    "requests>=2.32.0",
    "loguru>=0.7.2",
    "pydantic>=2.9.0",
]

[tool.uv]
dev-dependencies = [
    "mypy>=1.18.2",
    "ruff>=0.14.2",
    "types-requests>=2.32.4.20250913",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
